Improved the reference page layout.

--- a/relax.css
+++ b/relax.css
@@ -153,6 +153,14 @@ body {
 	font-style:italic;
 }
 
+.ref_ul {
+	padding:0px;
+	list-style:none;
+}
+
+.ref_li {
+	margin-top:20px;
+}
 
 a {
 	text-decoration:none;
