Modification of the header for all http://www.nmr-relax.com pages.
The formatting has been slightly changed and a tagline with keywords has been added.

--- a/relax.css
+++ b/relax.css
@@ -30,17 +30,24 @@ body {
 	float:left;
 	width:24%;
 	text-align:center;
-	padding:1em;
+	padding:10px;
 }
 
 .header {
-	font-size:x-large;
-	padding:1em;
-	margin-left:27%;
+	padding:10px;
+	margin-left:26%;
 	padding-left:2%;
-	min-height:85px;
+	min-height:105px;
 }
 
+p#headline {
+	font-size:x-large;
+}
+
+p#tagline {
+	font-size:small;
+    margin-top: -1.5em;
+}
 
 
 /*  Middle section of the page  */
