Updated the GUI description on the http://www.nmr-relax.com/features.html page.
This includes a lot of formatting fixes.  The Bieri et al., 2011 reference has also been added to
http://www.nmr-relax.com/refs.html.

--- a/relax.css
+++ b/relax.css
@@ -169,6 +169,15 @@ p#tagline {
     margin-top:20px;
 }
 
+.screenshot_table {
+    text-align:center;
+    font-size:small;
+    border:0em;
+    width:100%;
+    padding:0em;
+    border-collapse: collapse;
+}
+
 a {
     text-decoration:none;
     color:#0017aa;
