Nicer screenshot layout on the http://www.nmr-relax.com/features.html page.

--- a/relax.css
+++ b/relax.css
@@ -173,9 +173,9 @@ p#tagline {
     text-align:center;
     font-size:small;
     border:0em;
-    width:100%;
     padding:0em;
-    border-collapse: collapse;
+    width:100%;
+    border-spacing: 0em 5em;
 }
 
 a {
