Better layout of the screenshots at http://www.nmr-relax.com/screenshots.html.

--- a/relax.css
+++ b/relax.css
@@ -178,6 +178,10 @@ p#tagline {
     border-spacing: 0em 5em;
 }
 
+.screenshot_td {
+    width:33.33%;
+}
+
 a {
     text-decoration:none;
     color:#0017aa;
