Layout CCS improvements to the http://www.nmr-relax.com/links.html page.

--- a/relax.css
+++ b/relax.css
@@ -160,6 +160,14 @@ p#tagline {
     font-style:italic;
 }
 
+.link_tr {
+    height:100px;
+}
+
+.link_logo_td {
+    text-align:center;
+}
+
 .ref_ul {
     padding:0px;
     list-style:none;
