HTML fixes for the http://www.nmr-relax.com/events.html page.
The problems were found using the W3C validator.

--- a/relax.css
+++ b/relax.css
@@ -190,6 +190,10 @@ p#tagline {
     width:33.33%;
 }
 
+.table_title {
+    font-size:large;
+}
+
 a {
     text-decoration:none;
     color:#0017aa;
