Reformatting of the relax events webpage http://www.nmr-relax.com/events.html.

--- a/relax.css
+++ b/relax.css
@@ -160,6 +160,28 @@ p#tagline {
     font-style:italic;
 }
 
+.conf-table td {
+	padding: 10px 10px 10px 10px;
+	vertical-align: top;
+}
+
+.conf-subtable tr td {
+	padding: 0px 0px 0px 0px;
+	vertical-align: top;
+}
+
+.conf-table-icon {
+    width: 120px;
+	padding: 0px 0px 0px 0px;
+    text-align:center;
+}
+
+.conf-table-title {
+    font-style:italic;
+	vertical-align: bottom;
+    width: 18%;
+}
+
 .link_tr {
     height:100px;
 }
