Added links to http://www.nmr-relax.com to the VDM-Verlag published thesis on Amazon.
This link is http://www.amazon.com/Protein-Dynamics-Model-free-Analysis-Relaxation/dp/3639057627 and
the book cover is now included on http://www.nmr-relax.com/features.html.

--- a/relax.css
+++ b/relax.css
@@ -155,6 +155,10 @@ p#tagline {
 
 /*  Misc formatting  */
 
+.book_td {
+    vertical-align: top;
+}
+
 .code_ul {
     list-style:none;
     font-style:italic;
