Added CSS definitions for the collapsible menu.
This will be used for the side menu at http://www.nmr-relax.com/menu.html which is used in most of
the relax web pages.

--- a/relax.css
+++ b/relax.css
@@ -92,13 +92,20 @@ p#tagline {
     color:#3179ac;
 }
 
-.menu_ul {
-    margin-top:0px;
-    padding:0px;
-    list-style:none;
+.menu_def_collapsable {
+    text-indent : 5%;
+    cursor : pointer;
+    color:#3179ac;
 }
 
+.submenu {
+    display : none;
+}
 
+.submenu_def {
+    text-indent : 10%;
+    display : block;
+}
 
 /*  The main text box  */
 
