Changed the colour of the collapsible menu to match the others.
This is for the side menu of all http://www.nmr-relax.com webpages.

--- a/relax.css
+++ b/relax.css
@@ -95,7 +95,7 @@ p#tagline {
 .menu_def_collapsable {
     text-indent : 5%;
     cursor : pointer;
-    color:#3179ac;
+    color : #0017aa;
 }
 
 .submenu {
