--- a/relax.css
+++ b/relax.css
@@ -223,6 +223,21 @@ p#tagline {
     width:33.33%;
 }
 
+.software_table {
+    border-collapse: collapse;
+    width: 100%;
+    border: thin solid rgba(136,203,255,0.3);
+    margin-bottom: 10px;
+}
+
+.software_table td {
+    padding: 10px;
+}
+
+.software_td_head {
+    border-bottom: thin solid rgba(136,203,255,0.3);
+}
+
 .table_title {
     font-size:large;
 }
