--- a/relax.css
+++ b/relax.css
@@ -193,6 +193,21 @@ p#tagline {
     width: 18%;
 }
 
+.dep_table {
+    border-collapse: collapse;
+    width: 50%;
+    border: thin solid rgba(136,203,255,0.3);
+    margin-bottom: 10px;
+}
+
+.dep_table td {
+    padding: 10px;
+}
+
+.dep_td_head {
+    border-bottom: thin solid rgba(136,203,255,0.3);
+}
+
 .link_tr {
     height:100px;
 }
