--- a/relax.css
+++ b/relax.css
@@ -197,6 +197,7 @@ p#tagline {
     border-collapse: collapse;
     width: 50%;
     border: thin solid rgba(136,203,255,0.3);
+    margin-left: 1%;
     margin-bottom: 10px;
 }
 
@@ -240,8 +241,10 @@ p#tagline {
 
 .software_table {
     border-collapse: collapse;
-    width: 100%;
+    width: 98%;
     border: thin solid rgba(136,203,255,0.3);
+    margin-left: 1%;
+    margin-right: 1%;
     margin-bottom: 10px;
 }
 
