The relax software tables at http://www.nmr-relax.com/download.html are now fixed cell width.

--- a/relax.css
+++ b/relax.css
@@ -252,7 +252,18 @@ p#tagline {
     padding: 10px;
 }
 
-.software_td_head {
+.software_td_head1 {
+    width: 40%;
+    border-bottom: thin solid rgba(136,203,255,0.3);
+}
+
+.software_td_head2 {
+    width: 25%;
+    border-bottom: thin solid rgba(136,203,255,0.3);
+}
+
+.software_td_head3 {
+    width: 17.5%;
     border-bottom: thin solid rgba(136,203,255,0.3);
 }
 
