Reverted the lines under the table titles for http://www.nmr-relax.com/download.html.

--- a/relax.css
+++ b/relax.css
@@ -252,6 +252,11 @@ p#tagline {
     padding: 10px;
 }
 
+.software_td_head {
+    width: 40%;
+    border-bottom: thin solid rgba(136,203,255,0.3);
+}
+
 .software_td_head1 {
     width: 40%;
     border-bottom: thin solid rgba(136,203,255,0.3);
