Added all of the Gna! CSS for the relax mailing list archives.
This was taken from the Internet Archive to prevent http://www.nmr-relax.com from reading these
files from http://archive.org via CSS @include statements.

--- a/mail.gna.org/style.css
+++ b/mail.gna.org/style.css
@@ -21,7 +21,7 @@
  *
 */
 
-@import "https://web.archive.org/web/20170327003034cs_/http://gna.org/css/Gna.css"; 
+@import "/mail.gna.org/Gna.css";
 
 body {
   margin: 1em;
