--- a/mail.gna.org/archives-color-gna.css
+++ b/mail.gna.org/archives-color-gna.css
@@ -21,7 +21,7 @@
  *
 */
 
-@import "https://web.archive.org/web/20170327003046cs_/https://gna.org/css/Gna.css"; 
+@import "/mail.gna.org/Gna.css";
 
 body {
   margin: 1em;
