Mobile: Hide the large relax icon from the header.

--- a/relax.css
+++ b/relax.css
@@ -32,6 +32,11 @@ body {
     text-align:center;
     padding:10px;
 }
+@media screen and (max-width: 600px) {
+    .header_image {
+        display:none;
+    }
+}
 
 .header {
     padding:10px;
