Mobile: Initial version of the mobile relax website.

--- a/relax.css
+++ b/relax.css
@@ -32,12 +32,6 @@ body {
     text-align:center;
     padding:10px;
 }
-@media screen and (max-width: 600px) {
-    .header_image {
-        display:none;
-    }
-}
-
 .header {
     padding:10px;
     margin-left:24%;
@@ -52,6 +46,17 @@ p#headline {
 p#tagline {
     font-size: 0.7em;
     margin-top: -1.5em;
+}
+
+/* Mobile header */
+@media screen and (max-width: 600px) {
+    .header {
+        display:none;
+    }
+
+    .header_image {
+        display:none;
+    }
 }
 
 
@@ -74,6 +79,14 @@ p#tagline {
     border:thin solid #88cbff;
 }
 
+/* Turn off the mobile menu icons */
+.mobile_relax_icon {
+    display: none;
+}
+.menu a.icon {
+    display: none;
+}
+
 .menu_header {
     font-weight:bold;
     font-size:large;
@@ -82,7 +95,6 @@ p#tagline {
     color:#00004F;
     padding-top:10px;
     padding-bottom:10px;
-
 }
 
 .menu_title {
@@ -112,6 +124,57 @@ p#tagline {
     display : block;
 }
 
+/* Mobile menu */
+@media screen and (max-width: 600px) {
+    /* Hide the header. */
+    .menu_header {
+        display: none;
+    }
+
+    /* Redefine the menu. */
+    .menu {
+        margin: 0 1% 0 1%;
+        float: none;
+        width: 100%;
+        overflow: hidden;
+    }
+
+    /* Default hide the elements. */
+    .menu #menu_elements {
+        display: none;
+    }
+
+    /* Show the mobile relax icon. */
+    .mobile_relax_icon {
+        display: block;
+    }
+
+    /* Menu item formatting. */
+    .menu a {
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+        display: block;
+    }
+
+    /* Menu icon formatting. */
+    .menu a.icon {
+        margin: 0 1% 0 1%;
+        background: #56ded5;
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    /* Change the hover colours. */
+    .menu a:hover {
+        background-color: #00004F;
+        color: white;
+    }
+}
+
+
 /*  The main text box  */
 
 .main {
@@ -120,6 +183,11 @@ p#tagline {
     border-top : thin solid #88cbff;
     border-left : thin solid #88cbff;
     border-right : thin solid #88cbff;
+}
+@media screen and (max-width: 600px) {
+    .main {
+        margin: 0 1% 0 1%;
+    }
 }
 
 .main_box {
