Mobile: Made the http://www.nmr-relax.com/events.html page mobile friendly.

--- a/relax.css
+++ b/relax.css
@@ -255,9 +255,16 @@ p#tagline {
 }
 
 .conf-table-icon {
+    float: left;
     width: 120px;
 	padding: 0px 0px 0px 0px;
     text-align:center;
+}
+@media screen and (max-width: 600px) {
+    .conf-table-icon {
+        padding-top: 20px;
+        float: none;
+    }
 }
 
 .conf-table-title {
