Mobile: Improved formatting of the menu.

--- a/relax.css
+++ b/relax.css
@@ -138,6 +138,18 @@ p#tagline {
         width: 100%;
         overflow: hidden;
     }
+    .menu_title {
+        padding: 14px 16px;
+        text-indent: 0;
+    }
+    .menu_def {
+        text-indent: 0;
+    }
+    .menu_def_collapsable {
+        padding: 14px 16px;
+        font-size: 17px;
+        text-indent: 0;
+    }
 
     /* Default hide the elements. */
     .menu #menu_elements {
