CSS: Improved section commenting.

--- a/relax.css
+++ b/relax.css
@@ -1,4 +1,6 @@
-/*  The main body of the webpage  */
+/*
+ * Section:  Main body of the webpage
+ */
 
 body {
     margin:0%;
@@ -7,15 +9,17 @@ body {
     background-color:#e5feff;
 }
 
-
 /* Div box to clear the page and start the next box at the very bottom of everything else */
-
 .clear {
     clear:both;
     padding-top:0.1em;
 }
 
-/* Image formatting */
+
+
+/*
+ * Section:  Image formatting
+ */
 
 .image {
     color:inherit;
@@ -24,7 +28,9 @@ body {
 
 
 
-/*  The header  */
+/*
+ * Section:  The header
+ */
 
 .header_image {
     float:left;
@@ -60,14 +66,19 @@ p#tagline {
 }
 
 
-/*  Middle section of the page  */
+
+/*
+ * Section:  Middle section of the page
+ */
 
 .middle {
 }
 
 
 
-/*  The menu system  */
+/*
+ * Section:  The menu system
+ */
 
 .menu {
     float:left;
@@ -187,7 +198,10 @@ p#tagline {
 }
 
 
-/*  The main text box  */
+
+/*
+ * Section:  The main text box
+ */
 
 .main {
     margin:0 1% 0 24%;
@@ -220,7 +234,10 @@ p#tagline {
 }
 
 
-/*  The footer  */
+
+/*
+ * Section:  The footer
+ */
 
 .footer {
     margin:1%;
@@ -245,15 +262,13 @@ p#tagline {
 }
 
 
-/*  Misc formatting  */
+
+/*
+ * Section:  Table formatting
+ */
 
 .book_td {
     vertical-align: top;
-}
-
-.code_ul {
-    list-style:none;
-    font-style:italic;
 }
 
 .conf-table td {
@@ -309,15 +324,6 @@ p#tagline {
     text-align:center;
 }
 
-.ref_ul {
-    padding:0px;
-    list-style:none;
-}
-
-.ref_li {
-    margin-top:20px;
-}
-
 .screenshot_table {
     text-align:center;
     font-size:small;
@@ -367,6 +373,32 @@ p#tagline {
 .table_title {
     font-size:large;
 }
+
+
+
+/*
+ * Section:  List formatting
+ */
+
+.code_ul {
+    list-style:none;
+    font-style:italic;
+}
+
+.ref_ul {
+    padding:0px;
+    list-style:none;
+}
+
+.ref_li {
+    margin-top:20px;
+}
+
+
+
+/*
+ * Section:  Link formatting
+ */
 
 a {
     text-decoration:none;
