Mobile: Improved margins for smartphone screens.

--- a/relax.css
+++ b/relax.css
@@ -144,7 +144,7 @@ p#tagline {
 
     /* Redefine the menu. */
     .menu {
-        margin: 0 1% 0 1%;
+        margin: 0 0 0 0;
         float: none;
         width: 100%;
         overflow: hidden;
@@ -182,7 +182,7 @@ p#tagline {
 
     /* Menu icon formatting. */
     .menu a.icon {
-        margin: 0 1% 0 1%;
+        margin: 0 0 0 0;
         background: #56ded5;
         display: block;
         position: absolute;
@@ -212,7 +212,9 @@ p#tagline {
 }
 @media screen and (max-width: 600px) {
     .main {
-        margin: 0 1% 0 1%;
+        margin: 0 0 0 0;
+        border-left: none;
+        border-right: none;
     }
 }
 
@@ -261,6 +263,12 @@ p#tagline {
     font-size:x-small;
 }
 
+/* Mobile footer */
+@media screen and (max-width: 600px) {
+    .footer {
+        margin: 0;
+    }
+}
 
 
 /*
