--- a/relax.css
+++ b/relax.css
@@ -146,7 +146,7 @@ p#tagline {
     .menu {
         margin: 0 0 0 0;
         float: none;
-        width: 100%;
+        width: auto;
         overflow: hidden;
     }
     .menu_title {
@@ -213,8 +213,6 @@ p#tagline {
 @media screen and (max-width: 600px) {
     .main {
         margin: 0 0 0 0;
-        border-left: none;
-        border-right: none;
     }
 }
 
