Mobile: Refinements of the mobile menu header.

--- a/relax.css
+++ b/relax.css
@@ -167,21 +167,19 @@ p#tagline {
         display: none;
     }
 
-    /* Show the mobile relax icon. */
-    .mobile_relax_icon {
+    /* Show the mobile icon. */
+    .menu_mobile_header {
+        padding-top: 8px;
+        padding-bottom: 3px;
+        padding-left: 7px;
         display: block;
     }
 
-    /* Menu item formatting. */
-    .menu a {
+    /* Mobile icon formatting. */
+    .menu_mobile_header a.icon {
         padding: 14px 16px;
         text-decoration: none;
         font-size: 17px;
-        display: block;
-    }
-
-    /* Menu icon formatting. */
-    .menu a.icon {
         margin: 0 0 0 0;
         background: #56ded5;
         display: block;
@@ -190,8 +188,16 @@ p#tagline {
         top: 0;
     }
 
+    /* Menu item formatting. */
+    .menu_def a {
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+        display: block;
+    }
+
     /* Change the hover colours. */
-    .menu a:hover {
+    .menu_mobile_header a.icon:hover {
         background-color: #00004F;
         color: white;
     }
