Mobile: Fix for the collapsible menu entry formatting.

--- a/relax.css
+++ b/relax.css
@@ -195,6 +195,12 @@ p#tagline {
         font-size: 17px;
         display: block;
     }
+    .menu_def_collapsable a {
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+        display: block;
+    }
 
     /* Change the hover colours. */
     .menu_mobile_header a.icon:hover {
