Mobile: Reformatting of the relax release download tables for smaller screens down to 800px.

--- a/relax.css
+++ b/relax.css
@@ -331,6 +331,7 @@ p#tagline {
 }
 
 .dep_td_head {
+    font-weight: bold;
     border-bottom: thin solid rgba(136,203,255,0.3);
 }
 
@@ -355,7 +356,12 @@ p#tagline {
     width:33.33%;
 }
 
-.software_table {
+
+/*
+ * Subsection: relax release tables
+ */
+
+.release_table {
     border-collapse: collapse;
     width: 98%;
     border: thin solid rgba(136,203,255,0.3);
@@ -364,28 +370,100 @@ p#tagline {
     margin-bottom: 10px;
 }
 
-.software_table td {
+/* Default for all cells */
+.release_table td {
     padding: 10px;
 }
 
-.software_td_head {
-    width: 40%;
+/* Header cells */
+.release_table thead td {
+    font-weight: bold;
     border-bottom: thin solid rgba(136,203,255,0.3);
 }
-
-.software_td_head1 {
+.release_table thead td.package {
     width: 40%;
-    border-bottom: thin solid rgba(136,203,255,0.3);
 }
-
-.software_td_head2 {
+.release_table thead td.md5sum {
     width: 25%;
-    border-bottom: thin solid rgba(136,203,255,0.3);
+}
+.release_table thead td.gpg, .release_table thead td.size {
+    width: 17.5%;
 }
 
-.software_td_head3 {
-    width: 17.5%;
-    border-bottom: thin solid rgba(136,203,255,0.3);
+/* Body cells */
+.release_table tbody tr.release td {
+    font-style: italic;
+    background-color: #e5feff;
+}
+.release_table tbody td.md5sum {
+    font-size: small;
+    font-family: monospace;
+}
+.release_table tbody td.size {
+    text-align: right;
+}
+
+/* Mobile (smartphone and tablets in portrait mode): relax release tables */
+@media screen and (max-width: 800px) {
+    /* Remove borders. */
+    .release_table {
+        border: none;
+    }
+
+    /* Destroy the table! */
+    .release_table table, .release_table thead, .release_table tbody, .release_table tr, .release_table td {
+        display: block;
+    }
+
+    /* Hide the header */
+    .release_table thead tr {
+        display: none;
+    }
+
+    /* Add a border */
+    .release_table tbody tr {
+        border: thin solid rgba(136,203,255,0.3);
+        margin-bottom: 10px;
+    }
+
+    /* Make the cell behave as a row */
+    .release_table tbody td {
+        border: none;
+        position: relative;
+        padding-left: 30%;
+    }
+
+    /* Prefix the cells */
+    .release_table tbody td:before {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        width: 30%;
+        padding-right: 10px;
+        white-space: nowrap;
+    }
+
+    /* Treat the release cells differently. */
+    .release_table tr.release td {
+        padding-left: 10px;
+    }
+
+    /* Reintroduce the headers */
+    .release_table td:nth-of-type(1):before { content: "Package"; }
+    .release_table td:nth-of-type(2):before { content: "MD5"; }
+    .release_table td:nth-of-type(3):before { content: "GPG"; }
+    .release_table td:nth-of-type(4):before { align=left; content: "Size (B)"; }
+    .release_table tr.release td:nth-of-type(1):before { content: ""; }
+
+    /* Body cells */
+    .release_table tbody td.md5sum:before {
+        font-size: initial;
+        font-family: initial;
+    }
+    .release_table tbody td.size {
+        text-align: left;
+    }
+
 }
 
 .table_title {
