Mobile: Fix for turning off the mobile menu items for desktop display.

--- a/relax.css
+++ b/relax.css
@@ -91,10 +91,7 @@ p#tagline {
 }
 
 /* Turn off the mobile menu icons */
-.mobile_relax_icon {
-    display: none;
-}
-.menu a.icon {
+.menu_mobile_header {
     display: none;
 }
 
