Mobile: Switch to a smaller relax logo for tablets in portrait mode.
The original logo is far too big.

--- a/relax.css
+++ b/relax.css
@@ -33,20 +33,23 @@ body {
  */
 
 .header_image {
-    float:left;
-    width:22%;
-    text-align:center;
-    padding:10px;
+    float: left;
+    width: 22%;
+    text-align: center;
+    padding: 10px;
+}
+.header_image_small {
+    display: none;
 }
 .header {
-    padding:10px;
-    margin-left:24%;
-    padding-left:2%;
-    min-height:105px;
+    padding: 10px;
+    margin-left: 24%;
+    padding-left: 2%;
+    min-height: 105px;
 }
 
 p#headline {
-    font-size:x-large;
+    font-size: x-large;
 }
 
 p#tagline {
@@ -56,12 +59,30 @@ p#tagline {
 
 /* Mobile header */
 @media screen and (max-width: 600px) {
-    .header {
-        display:none;
-    }
-
     .header_image {
-        display:none;
+        display: none;
+    }
+    .header {
+        display: none;
+    }
+}
+
+/* Portrait tablet header */
+@media screen and (min-width: 600px) and (max-width: 800px) {
+    .header_image_small {
+        float: left;
+        width: 22%;
+        text-align: center;
+        padding: 10px;
+        padding-top: 50px;
+        display: block;
+    }
+    .header_image {
+        display: none;
+    }
+    .header {
+        padding: 1px;
+        min-height: 100px;
     }
 }
 
