--- a/relax.css
+++ b/relax.css
@@ -361,20 +361,6 @@ p#tagline {
     text-align:center;
 }
 
-.screenshot_table {
-    text-align:center;
-    font-size:small;
-    border:0em;
-    padding:0em;
-    width:100%;
-    border-spacing: 0em 5em;
-}
-
-.screenshot_td {
-    width:33.33%;
-}
-
-
 /*
  * Subsection: relax release tables
  */
@@ -506,6 +492,55 @@ p#tagline {
 
 .ref_li {
     margin-top:20px;
+}
+
+
+/*
+ * Section:  Grid formatting
+ */
+
+/* Screenshot gird */
+.screenshot_grid {
+    display: inline-grid;
+    text-align: center;
+    font-size: small;
+    width: 100%;
+}
+
+.screenshot_grid_item {
+    padding-bottom: 20px;
+    width: 100%;
+}
+
+/* Single column view */
+@media screen and (max-width: 880px) {
+    .screenshot_grid {
+        grid-template-columns: auto;
+    }
+    .screenshot_grid_item img {
+        width: 90%;
+    }
+}
+
+/* Two column view */
+@media screen and (min-width: 880px) and (max-width: 1280px) {
+    .screenshot_grid {
+        grid-template-columns: auto auto;
+    }
+}
+
+/* Three column view */
+@media screen and (min-width: 1280px) and (max-width: 1700px) {
+    .screenshot_grid {
+        grid-template-columns: auto auto auto;
+    }
+}
+
+/* Four column view */
+@media screen and (min-width: 1700px) {
+    .screenshot_grid {
+        grid-template-columns: auto auto auto auto;
+    }
 }
 
 
