Mobile: Refinement of the menu header to be pixel perfect.

--- a/relax.css
+++ b/relax.css
@@ -185,7 +185,7 @@ p#tagline {
         display: none;
     }
 
-    /* Show the mobile icon. */
+    /* Show the mobile menu header. */
     .menu_mobile_header {
         padding-top: 8px;
         padding-bottom: 3px;
@@ -195,7 +195,7 @@ p#tagline {
 
     /* Mobile icon formatting. */
     .menu_mobile_header a.icon {
-        padding: 14px 16px;
+        padding: 12.8px 18px;
         text-decoration: none;
         font-size: 17px;
         margin: 0 0 0 0;
@@ -204,6 +204,8 @@ p#tagline {
         position: absolute;
         right: 0;
         top: 0;
+        border-top: thin solid #88cbff;
+        border-right: thin solid #88cbff;
     }
 
     /* Menu item formatting. */
@@ -243,6 +245,7 @@ p#tagline {
 @media screen and (max-width: 600px) {
     .main {
         margin: 0 0 0 0;
+        border-top : thin solid white;
     }
 }
 
