Mobile: Refined formatting of the menu.

--- a/relax.css
+++ b/relax.css
@@ -168,6 +168,8 @@ p#tagline {
         overflow: hidden;
     }
     .menu_title {
+        font-size: 24px;
+        background: #56ded5;
         padding: 14px 16px;
         text-indent: 0;
     }
@@ -193,6 +195,14 @@ p#tagline {
         display: block;
     }
 
+    /* Menu item formatting. */
+    .menu_def, .menu_def_collapsable, .submenu_def {
+        padding: 8px 16px;
+        text-decoration: none;
+        font-size: 20px;
+        display: block;
+    }
+
     /* Mobile icon formatting. */
     .menu_mobile_header a.icon {
         padding: 12.8px 18px;
@@ -206,20 +216,6 @@ p#tagline {
         top: 0;
         border-top: thin solid #88cbff;
         border-right: thin solid #88cbff;
-    }
-
-    /* Menu item formatting. */
-    .menu_def a {
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-        display: block;
-    }
-    .menu_def_collapsable a {
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-        display: block;
     }
 
     /* Change the hover colours. */
