Mobile: Improved stacked layout for the book reference in the features webpage.

--- a/relax.css
+++ b/relax.css
@@ -505,12 +505,10 @@ p#tagline {
     font-size: small;
     width: 100%;
 }
-
 .screenshot_grid_item {
     padding-bottom: 20px;
     width: 100%;
 }
-
 .screenshot_grid_item img {
     width: 90%;
 }
@@ -543,6 +541,34 @@ p#tagline {
     }
 }
 
+/* Book ref grid. */
+.book_ref_grid {
+    display: grid;
+    text-align: center;
+    grid-template-columns: 150px auto;
+}
+.book_ref_grid_img img {
+    width: 100%;
+}
+.book_ref_grid_text {
+    text-align: left;
+    padding-left: 10px;
+}
+
+/* Mobile: book ref grid. */
+@media screen and (max-width: 600px) {
+    .book_ref_grid {
+        grid-template-columns: auto;
+    }
+
+    /* Image */
+    .book_ref_grid_img img {
+        width: 150px;
+    }
+    .book_ref_grid_text {
+        padding-left: 0;
+    }
+}
 
 
 /*
