Mobile: Reformatting of the links tables for small screens up to 800px.
The tables are collapsed into blocks.

--- a/relax.css
+++ b/relax.css
@@ -352,14 +352,6 @@ p#tagline {
     border-bottom: thin solid rgba(136,203,255,0.3);
 }
 
-.link_tr {
-    height:100px;
-}
-
-.link_logo_td {
-    text-align:center;
-}
-
 /*
  * Subsection: relax release tables
  */
@@ -466,6 +458,46 @@ p#tagline {
     .release_table tbody td.size {
         text-align: left;
     }
+}
+
+/*
+ * Subsection: relax links tables
+ */
+
+.links_table td {
+    padding: 5px;
+}
+
+.link_tr {
+    height: 100px;
+}
+
+.link_logo_td {
+    text-align: center;
+}
+
+/* Mobile (smartphone and tablets in portrait mode): relax links tables */
+@media screen and (max-width: 800px) {
+    /* Destroy the table! */
+    .links_table table, .links_table thead, .links_table tbody, .links_table tr, .links_table td {
+        display: block;
+    }
+
+    /* Hide the header */
+    .links_table thead tr {
+        display: none;
+    }
+
+    /* Add a border */
+    .links_table tbody tr {
+        border: thin solid rgba(136,203,255,0.3);
+        margin-bottom: 10px;
+    }
+
+.link_tr {
+    height: auto;
+}
+
 }
 
 
