--- a/relax.css
+++ b/relax.css
@@ -494,10 +494,10 @@ p#tagline {
         margin-bottom: 10px;
     }
 
-.link_tr {
-    height: auto;
-}
-
+    /* Fix for heights. */
+    .link_tr {
+        height: auto;
+    }
 }
 
 
