Mobile: Improved layout for the Google SiteSearch element in http://www.nmr-relax.com/docs.html.

--- a/relax.css
+++ b/relax.css
@@ -500,7 +500,27 @@ p#tagline {
     }
 }
 
+/*
+ * Subsection: Google SiteSearch table.
+ */
 
+/* Table formatting */
+.google_sitesearch_table {
+    width: 100%;
+}
+
+
+/* Mobile */
+@media screen and (max-width: 750px) {
+    /* Destroy the table! */
+    .google_sitesearch_table table, .google_sitesearch_table tr, .google_sitesearch_table td {
+        display: block;
+    }
+
+    .google_sitesearch_logo {
+        display: block;
+    }
+}
 
 /*
  * Section:  List formatting
