--- a/relax.css
+++ b/relax.css
@@ -523,6 +523,64 @@ p#tagline {
 }
 
 /*
+ * Subsection: MS Visual Studio table.
+ */
+
+.ms_visual_studio_table {
+    border-spacing: 10px;
+    border-collapse: separate;
+}
+
+.ms_visual_studio_table thead tr {
+    font-weight: bold;
+}
+
+/* Mobile (smartphone and tablets in portrait mode): MS Visual Studio table */
+@media screen and (max-width: 1000px) {
+    .ms_visual_studio_table {
+        border-spacing: 0;
+        border-collapse: none;
+    }
+
+    /* Destroy the table! */
+    .ms_visual_studio_table table, .ms_visual_studio_table thead, .ms_visual_studio_table tbody, .ms_visual_studio_table tr, .ms_visual_studio_table td {
+        display: block;
+    }
+
+    /* Hide the header. */
+    .ms_visual_studio_table thead tr {
+        display: none;
+    }
+
+    /* Add a border. */
+    .ms_visual_studio_table tbody tr {
+        border: thin solid rgba(136,203,255,0.3);
+        margin-bottom: 10px;
+    }
+
+    /* Make the cell behave as a row */
+    .ms_visual_studio_table tbody td {
+        position: relative;
+        padding-left: 25%;
+    }
+
+    /* Prefix the cells */
+    .ms_visual_studio_table tbody td:before {
+        position: absolute;
+        top: 0px;
+        left: 10px;
+        width: 25%;
+        padding-right: 10px;
+        white-space: nowrap;
+    }
+
+    /* Reintroduce the headers. */
+    .ms_visual_studio_table td:nth-of-type(1):before { content: "Edition:"; }
+    .ms_visual_studio_table td:nth-of-type(2):before { content: "EXE:"; }
+    .ms_visual_studio_table td:nth-of-type(3):before { content: "ISO:"; }
+}
+
+/*
  * Section:  List formatting
  */
 
