Mobile: Smaller left padding for the code snippets shown as list HTML elements.

--- a/relax.css
+++ b/relax.css
@@ -580,13 +580,28 @@ p#tagline {
     .ms_visual_studio_table td:nth-of-type(3):before { content: "ISO:"; }
 }
 
+
+
 /*
  * Section:  List formatting
  */
 
 .code_ul {
-    list-style:none;
-    font-style:italic;
+    list-style: none;
+    font-style: italic;
+    padding-left: 2em;
+}
+
+.code_ul ul {
+    list-style: none;
+    font-style: italic;
+    padding-left: 2em;
+}
+
+.code_ul ul ul {
+    list-style: none;
+    font-style: italic;
+    padding-left: 2em;
 }
 
 .ref_ul {
