Events: Redesign of the table layout for both mobile and desktop.

--- a/relax.css
+++ b/relax.css
@@ -306,35 +306,6 @@ p#tagline {
     vertical-align: top;
 }
 
-.conf-table td {
-	padding: 10px 10px 10px 10px;
-	vertical-align: top;
-}
-
-.conf-subtable tr td {
-	padding: 0px 0px 0px 0px;
-	vertical-align: top;
-}
-
-.conf-table-icon {
-    float: left;
-    width: 120px;
-	padding: 0px 0px 0px 0px;
-    text-align:center;
-}
-@media screen and (max-width: 600px) {
-    .conf-table-icon {
-        padding-top: 20px;
-        float: none;
-    }
-}
-
-.conf-table-title {
-    font-style:italic;
-	vertical-align: bottom;
-    width: 18%;
-}
-
 .dep_table {
     border-collapse: collapse;
     width: 50%;
@@ -350,6 +321,47 @@ p#tagline {
 .dep_td_head {
     font-weight: bold;
     border-bottom: thin solid rgba(136,203,255,0.3);
+}
+
+/*
+ * Subsection: Event tables.
+ */
+
+/* Logo to the top left. */
+.event-logo {
+    float: left;
+    width: 120px;
+	padding-top: 5px;
+}
+
+/* Table formatting. */
+.event-table {
+    margin-bottom: 25px;
+}
+
+/* Bold titles. */
+.event-table thead {
+    font-weight: bold;
+}
+
+/* Cell formatting. */
+.event-table td {
+	vertical-align: top;
+}
+
+/* Section formatting. */
+.event-table tbody td:first-child {
+    font-style: italic;
+    width: 18%;
+}
+
+@media screen and (max-width: 600px) {
+    /* Logo centred at top */
+    .event-logo {
+        float: none;
+        width: 100%;
+        text-align: center;
+    }
 }
 
 /*
