--- a/relax.css
+++ b/relax.css
@@ -476,15 +476,15 @@ p#tagline {
  * Subsection: relax links tables
  */
 
+.link_table tr {
+    height: 100px;
+}
+
 .links_table td {
     padding: 5px;
 }
 
-.link_tr {
-    height: 100px;
-}
-
-.link_logo_td {
+.links_table td:first-child {
     text-align: center;
 }
 
@@ -504,10 +504,6 @@ p#tagline {
     .links_table tbody tr {
         border: thin solid rgba(136,203,255,0.3);
         margin-bottom: 10px;
-    }
-
-    /* Fix for heights. */
-    .link_tr {
         height: auto;
     }
 }
