Links: Fix for the OpenHub widget for small screens.

--- a/relax.css
+++ b/relax.css
@@ -506,6 +506,12 @@ p#tagline {
         margin-bottom: 10px;
         height: auto;
     }
+
+    /* Fix for wide OpenHub widgets. */
+    .links_table td:first-child {
+        padding-left: 0;
+        padding-right: 0;
+    }
 }
 
 /*
