Mobile: High resolution relax logos are now used to improve appearances when zooming.

--- a/relax.css
+++ b/relax.css
@@ -32,26 +32,32 @@ body {
  * Section:  The header
  */
 
+/* Standard relax logo. */
 .header_image {
     float: left;
     width: 22%;
     text-align: center;
-    padding: 10px;
+    padding: 15px;
 }
+.header_image img {
+    width: 200px;
+}
+
+/* Smaller relax logo for portrait tablets. */
 .header_image_small {
     display: none;
 }
+
+/* Header text. */
 .header {
     padding: 10px;
     margin-left: 24%;
     padding-left: 2%;
     min-height: 105px;
 }
-
 p#headline {
     font-size: x-large;
 }
-
 p#tagline {
     font-size: 0.7em;
     margin-top: -1.5em;
@@ -59,9 +65,12 @@ p#tagline {
 
 /* Mobile header */
 @media screen and (max-width: 600px) {
+    /* Standard relax logo. */
     .header_image {
         display: none;
     }
+
+    /* Header text. */
     .header {
         display: none;
     }
@@ -69,17 +78,25 @@ p#tagline {
 
 /* Portrait tablet header */
 @media screen and (min-width: 600px) and (max-width: 800px) {
+    /* Standard relax logo. */
+    .header_image {
+        display: none;
+    }
+
+    /* Smaller relax logo for portrait tablets. */
     .header_image_small {
         float: left;
         width: 22%;
         text-align: center;
         padding: 10px;
-        padding-top: 50px;
+        padding-top: 30px;
         display: block;
     }
-    .header_image {
-        display: none;
+    .header_image_small img {
+        width: 130px;
     }
+
+    /* Header text. */
     .header {
         padding: 1px;
         min-height: 100px;
@@ -193,6 +210,11 @@ p#tagline {
         padding-bottom: 3px;
         padding-left: 7px;
         display: block;
+    }
+
+    /* Mobile logo formatting. */
+    .menu_mobile_header img {
+        width: 80px;
     }
 
     /* Menu item formatting. */
