Events: High resolution graphics are now used for all of the event logos.

--- a/relax.css
+++ b/relax.css
@@ -355,6 +355,9 @@ p#tagline {
     width: 120px;
 	padding-top: 5px;
 }
+.event-logo img {
+    width: 120px;
+}
 
 /* Table formatting. */
 .event-table {
@@ -383,6 +386,11 @@ p#tagline {
         float: none;
         width: 100%;
         text-align: center;
+    }
+
+    /* Wider banner logos. */
+    .event-logo-banner img {
+        width: 300px;
     }
 }
 
