Links: Complete reworking of the logos for the http://www.nmr-relax.com/links.html webpage.
Where possible, the graphics are now at high resolution.  Different sizes are used for the different
desktop and mobile layouts of the tables.

--- a/relax.css
+++ b/relax.css
@@ -518,6 +518,62 @@ p#tagline {
     text-align: center;
 }
 
+/* Sudo logo for MARC. */
+.links_table tr#MARC td:first-child a {
+    font-family: monospace;
+    font-weight: bold;
+    font-size: x-large;
+    color: black;
+}
+
+/* Sudo logo for archive.today. */
+.links_table tr#archive_today td:first-child a {
+    font-size: 24px;
+    text-align: center;
+    white-space: nowrap;
+    color: black;
+    cursor: pointer;
+    font-family: sans-serif;
+}
+
+/* Some manually adjusted image widths. */
+.links_table tr#SourceForge img {
+    width: 200px;
+}
+.links_table tr#Gna img {
+    width: 150px;
+}
+.links_table tr#GitHub img {
+    width: 150px;
+}
+.links_table tr#GitLab img {
+    width: 100px;
+}
+.links_table tr#Bitbucket img {
+    width: 200px;
+}
+.links_table tr#Free_software_directory img {
+    width: 130px;
+}
+.links_table tr#LinuxLinks img {
+    width: 150px;
+}
+.links_table tr#Softpedia img {
+    width: 200px;
+}
+.links_table tr#Prolinux img {
+    width: 200px;
+}
+.links_table tr#Open_Source_Software_Directory img {
+    width: 200px;
+}
+.links_table tr#PDC img {
+    width: 150px;
+}
+.links_table tr#minfx img {
+    width: 150px;
+}
+
 /* Mobile (smartphone and tablets in portrait mode): relax links tables */
 @media screen and (max-width: 1000px) {
     /* Destroy the table! */
@@ -541,6 +597,41 @@ p#tagline {
     .links_table td:first-child {
         padding-left: 0;
         padding-right: 0;
+    }
+
+    /* Some manually adjusted image widths. */
+    .links_table tr#SourceForge img {
+        width: 300px;
+    }
+    .links_table tr#Gna img {
+        width: 125px;
+    }
+    .links_table tr#GitHub img {
+        width: 200px;
+    }
+    .links_table tr#GitLab img {
+        width: 120px;
+    }
+    .links_table tr#Bitbucket img {
+        width: 300px;
+    }
+    .links_table tr#LinuxLinks img {
+        width: 250px;
+    }
+    .links_table tr#Softpedia img {
+        width: 300px;
+    }
+    .links_table tr#Prolinux img {
+        width: 300px;
+    }
+    .links_table tr#Open_Source_Software_Directory img {
+        width: 300px;
+    }
+    .links_table tr#archive_today td:first-child a {
+        font-size: 32px;
+    }
+    .links_table tr#minfx img {
+        width: 200px;
     }
 }
 
