--- a/relax.css
+++ b/relax.css
@@ -740,12 +740,12 @@ p#tagline {
 }
 
 .ref_ul {
-    padding:0px;
-    list-style:none;
+    padding: 0px;
+    list-style: "    " inside none;
 }
 
-.ref_li {
-    margin-top:20px;
+.ref_ul li {
+    margin-top: 20px;
 }
 
 
