Mobile: Support for collapsible headers for mobile viewing of the website.
This has been initially added to http://www.nmr-relax.com/refs.html

--- a/relax.css
+++ b/relax.css
@@ -284,6 +284,43 @@ p#tagline {
     list-style:none;
 }
 
+/* Mobile headers */
+@media screen and (max-width: 600px) {
+    /* Format the collapsible header. */
+    .collapsible_section {
+        padding-top: 10px;
+        padding-left: 8%;
+        position: relative;
+        cursor: pointer;
+        text-align: left;
+    }
+
+    /* The div associated with the collapsible header. */
+    .section_content {
+        display: none;
+        overflow: hidden;
+    }
+
+    /* Add a symbol to indicate the header can be opened. */
+    .collapsible_section:before {
+        position: absolute;
+        top: 45%;
+        left: 5px;
+        width: 8%;
+        padding-right: 10px;
+        white-space: nowrap;
+        font-family: "FontAwesome";
+        content: '\f078'; /* Font Awesome fa-chevron-down */
+        font-size: 12px;
+        font-weight: 10;
+    }
+
+    /* Add a symbol to indicate the header can be collapsed. */
+    .collapsible_section_open:before {
+        content: '\f077    '; /* Font Awesome fa-chevron-up */
+    }
+}
+
 
 
 /*
