Complete structural redesign of the website structure.
The majority of headers are now collapsible on mobile devices.  The main div element design has been
simplified with the "main_box" div boxes removed and the "main_h2" and "main_h3" classes eliminated
and instead the h2 and h2 elements formatted.  The structure has been standardised on all pages,
including only using h1 elements for the page title.

--- a/relax.css
+++ b/relax.css
@@ -253,29 +253,34 @@ p#tagline {
  * Section:  The main text box
  */
 
+/* The central text area. */
 .main {
-    margin:0 1% 0 24%;
-    background-color:white;
-    border-top : thin solid #88cbff;
-    border-left : thin solid #88cbff;
-    border-right : thin solid #88cbff;
+    margin: 0 1% 0 24%;
+    background-color: white;
+    border: thin solid #88cbff;
+    padding-left: 1.5%;
+    padding-right: 1.5%;
+    padding-bottom: 2%;
 }
 @media screen and (max-width: 600px) {
     .main {
         margin: 0 0 0 0;
-        border-top : thin solid white;
+        border-top: thin solid white;
+        padding-left: 2%;
+        padding-right: 2%;
+        padding-bottom: 2%;
     }
 }
 
-.main_box {
-    padding-left:2%;
-    padding-right:2%;
-    padding-bottom:2%;
-    border-bottom:thin solid #88cbff;
+/* Header h2: A dividing top line with padding. */
+h2 {
+    border-top: thin solid #88cbff;
+    padding-top: 10px;
 }
 
-.main_h2 {
-    border-top:thin solid #88cbff;
+/* Header h3: Increase the font size. */
+h3 {
+    font-size: 130%;
 }
 
 .main_ul {
