Mobile: All table of contents are disabled on mobile devices.

--- a/relax.css
+++ b/relax.css
@@ -272,6 +272,13 @@ p#tagline {
     }
 }
 
+/* Table of contents */
+@media screen and (max-width: 600px) {
+    .toc {
+        display: none;
+    }
+}
+
 /* Header h2: A dividing top line with padding. */
 h2 {
     border-top: thin solid #88cbff;
