Introductory text and graphics have been added to most of the relax webpages.
This improves the experience on mobile devices.

--- a/relax.css
+++ b/relax.css
@@ -26,6 +26,36 @@ body {
     border:0em;
 }
 
+/*
+ * Subsection: Main text graphics.
+ */
+
+.main_graphic {
+    text-align: center;
+}
+.main_graphic.small img {
+    width: 20%;
+}
+.main_graphic.medium img {
+    width: 30%;
+}
+.main_graphic.large img {
+    width: 40%;
+}
+
+/* Mobile: Increase the image proportions. */
+@media screen and (max-width: 600px) {
+    .main_graphic.small img {
+        width: 70%;
+    }
+    .main_graphic.medium img {
+        width: 80%;
+    }
+    .main_graphic.large img {
+        width: 90%;
+    }
+}
+
 
 
 /*
@@ -402,7 +432,7 @@ h3 {
 .event-logo {
     float: left;
     width: 120px;
-	padding-top: 5px;
+    padding-top: 5px;
 }
 .event-logo img {
     width: 120px;
@@ -420,7 +450,7 @@ h3 {
 
 /* Cell formatting. */
 .event-table td {
-	vertical-align: top;
+    vertical-align: top;
 }
 
 /* Section formatting. */
