Switch to a fixed pixel width for the main text graphics.
This prevents ridiculously large graphics on some monitor resolutions.

--- a/relax.css
+++ b/relax.css
@@ -34,13 +34,13 @@ body {
     text-align: center;
 }
 .main_graphic.small img {
-    width: 20%;
+    width: 150px;
 }
 .main_graphic.medium img {
-    width: 30%;
+    width: 200px;
 }
 .main_graphic.large img {
-    width: 40%;
+    width: 300px;
 }
 
 /* Mobile: Increase the image proportions. */
