Mbbile: Redesign of the mobile menu.
The icon positions have been swapped, the menu icon now does not change colours and has no
background, and the mobile menu activation causes the 'main' and 'footer' div elements to be hidden.

--- a/relax.css
+++ b/relax.css
@@ -236,45 +236,39 @@ p#tagline {
 
     /* Show the mobile menu header. */
     .menu_mobile_header {
-        padding-top: 8px;
-        padding-bottom: 3px;
-        padding-left: 7px;
+        height: 50px;
         display: block;
     }
 
     /* Mobile logo formatting. */
     .menu_mobile_header img {
         width: 80px;
+        position: absolute;
+        right: 5px;
+        top: 8px;
     }
 
     /* Menu item formatting. */
     .menu_def, .menu_def_collapsable, .submenu_def {
         padding: 8px 16px;
-        text-decoration: none;
         font-size: 20px;
         display: block;
     }
 
-    /* Mobile icon formatting. */
-    .menu_mobile_header a.icon {
-        padding: 12.8px 18px;
+    /* Drop down menu icon. */
+    .menu_mobile_header .icon {
+        padding: 14px 18px;
         text-decoration: none;
-        font-size: 17px;
+        font-size: 20px;
         margin: 0 0 0 0;
-        background: #56ded5;
         display: block;
         position: absolute;
-        right: 0;
+        color: #0017aa;
+        left: 0;
         top: 0;
-        border-top: thin solid #88cbff;
-        border-right: thin solid #88cbff;
     }
 
     /* Change the hover colours. */
-    .menu_mobile_header a.icon:hover {
-        background-color: #00004F;
-        color: white;
-    }
 }
 
 
