Mobile: Improved the main text graphic sizes for landscape orientations.

--- a/relax.css
+++ b/relax.css
@@ -47,12 +47,15 @@ body {
 @media screen and (max-width: 600px) {
     .main_graphic.small img {
         width: 70%;
+        max-width: 300px;
     }
     .main_graphic.medium img {
         width: 80%;
+        max-width: 350px;
     }
     .main_graphic.large img {
         width: 90%;
+        max-width: 350px;
     }
 }
 
