Manual: Significant improvements for viewing on mobile devices.
These changes must be merged back into the relax source code repository, as it will be overwritten
with the next update.

--- a/manual/relax.css
+++ b/manual/relax.css
@@ -177,3 +177,31 @@ SPAN.texttt		{ font-family: monospace  }
 #par117477		{   }
 #par117545		{   }
 #par119877		{   }
+
+/* Wrap within pre tags, from https://www.longren.io/wrapping-text-inside-pre-tags/. */
+pre {
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
+/* Mobile view: Improved support for small screens. */
+@media screen and (max-width: 600px) {
+    /* Prevent images being too large. */
+    img {
+        max-width: 330px;
+    }
+
+    /* Smaller navigation panel. */
+    .navigation img {
+        width: auto;
+        max-height: 36px;
+    }
+
+    /* Decrease list indentation. */
+    ul {
+        padding-left: 1em;
+    }
+}
